--- a/playground.ipynb
+++ b/playground.ipynb
@@ -383,14 +383,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[9, 7, 5, 3]\n"
+      "[9, 7, 5, 3, 1]\n"
      ]
     }
    ],
    "source": [
     "# challenge 4\n",
     "list2 = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-    "print(list2[8:0:-2]) # output seharusnya [9, 7, 5, 3, 1]"
+    "print(list2[8::-2]) # output seharusnya [9, 7, 5, 3, 1]"
    ]
   },
   {
